# python-module-template

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: lint.yml  release.yml  test.yml
