[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
license = "{{cookiecutter.license}}"
requires-python = ">={{cookiecutter.python_version}}"
authors = [
    {name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"}
]

keywords = []  # TODO: Add relevant keywords
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "{{ {'Apache-2.0': 'License :: OSI Approved :: Apache Software License', 'MIT': 'License :: OSI Approved :: MIT License', 'GPL-3.0': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'}[cookiecutter.license] }}",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: {{cookiecutter.python_version}}",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# TODO: Add your runtime dependencies here
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    # Uncomment if using async: "pytest-asyncio>=1.3.0",
]
dev = [
    "mypy>=1.19.1",
    "prek>=0.3.4",
    "pylint>=4.0.5",
    "ruff>=0.14.10",
]

[project.urls]
Homepage = "{% if cookiecutter.github_username == 'OpenDisplay' %}https://opendisplay.org{% else %}https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}{% endif %}"
Repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}"
Documentation = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/{{cookiecutter.package_name}}"]

[tool.ruff]
line-length = 120
target-version = "py{{cookiecutter.python_version.replace('.', '')}}"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "{{cookiecutter.python_version}}"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Uncomment if using async tests: asyncio_mode = "auto"
